--- a/experimental.tex
+++ b/experimental.tex
@@ -165,7 +165,7 @@ funciones objetivo propuestas (\emph{RC} y \emph{GE}). Los resultados se present
 Cada fila corresponde a un caso de estudio; debajo del nombre se indica el tamaño de la API (\#API) y 
 la cantidad de métodos generadores del \emph{ground truth} (\#MétodosGen). 
 Las columnas se agrupan por algoritmo (\textbf{GA} y \textbf{HC}) y, dentro de cada uno, por función 
-objetivo, \textbf{\tiny GE} (generación exhaustiva) y \textbf{\tiny RC} (cobertura con Randoop). 
+objetivo, \textbf{GE} (generación exhaustiva) y \textbf{RC} (cobertura con Randoop). 
 El formato de cada celda es \emph{promedio}/\textbf{peor} en segundos; 
 el \emph{promedio} se calcula sobre las 5 ejecuciones que se realizaron, y el \textbf{peor} es el máximo observado. 
 
