--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -47,6 +47,6 @@
 \hline
 \end{tabular}
 
-\caption{Casos de estudio: \textbf{promedio/peor} de tiempo (s) para hallar el subconjunto óptimo de métodos generadores. \textbf{GA} y \textbf{HC} evaluados con \textbf{GE} (generación exhaustiva) y \textbf{RC} (cobertura con Randoop).}
+\caption{\textbf{promedio/peor} de tiempo (s) para hallar el subconjunto suficiente de métodos generadores.}
 \label{tab:eficiencia}
 \end{table}
